# THE_ONE_FINAL

./: .cookietest  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTO_BACKUP_README.md  README.md  auto_scrape_and_embed.py  auto_scrape_with_safety.py  check_bookings.py  cleanup_duplicates.py  config  create_vector_index.py  debug_email.py  debug_pgvector.py  delete_pantip.py  dev-requirements.txt  docker-compose.yml  fix_database.bat  global_key_update.py  manage.py  migrate_create_chatroom_for_confirmed_booking.py  migrate_create_chatroom_for_confirmed_booking_auto.py  pyproject.toml  quick_start.ps1  requirements.txt  reset_ngrok.ps1  scheduled_backup.py  secrets_report_masked.txt  setup_ngrok_task.ps1  setup_scheduled_backup.ps1  start_ngrok.ps1  start_the_one.ps1  test_db_connection.py  verify_migrations.py
.github/workflows/: ci.yml  secret-scan.yml
booking/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py  views_web.py
booking/migrations/: 0001_initial.py  0002_initial.py
chat/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py  views_web.py
chat/migrations/: 0001_initial.py
chatbot/: admin.py  models.py  models_knowbase.py  serializers.py  urls.py  views.py  views_web.py
chatbot/migrations/: 0001_initial.py  0002_initial.py  0003_motorcycleknowledge_embedding.py  0004_knowledgebase.py  0005_knowledgedatabase_delete_knowledgebase_and_more.py  0006_rename_knowledgedatabase_knowlagedatabase_and_more.py  0007_knowlagedatabase_embedding.py  0008_alter_knowlagedatabase_embedding.py  0009_knowbase.py  (+3 more)
config_files/: docker-compose.yml
data/: postmaster.pid
embedding/: embed_with_huggingface.py
logs/: backup_status_20251218.txt
mechanics/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py  views_web.py
n8n_local/: config
scraper/: README.md  bigbike_faq_complete.json  bigbike_scraper_auto.py  pantip_scraper.py
scraper_and_import_embedding/: __init__.py  import_to_knowbase.py  pantip_scraper.py  requirements.txt
scripts/: add_logo.py  quick_start.ps1  remove_secrets.sh  reset_ngrok.ps1  setup_ngrok_task.ps1  setup_scheduled_backup.ps1  start_ngrok.ps1  start_the_one.ps1
templates/: base.html  home.html
tests/: test_files_exist.py  test_scraper_utils.py  test_scrapers_additional.py  test_scrapers_more.py  test_selenium_mocks.py
the_one/: asgi.py  logging_config.py  retry.py  settings.py  urls.py  wsgi.py
the_one_app/: apps.py
the_one_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
users/: admin.py  models.py  models_notification.py  serializers.py  serializers_notification.py  urls.py  views.py  views_notification.py  views_web.py
(+1287 files in other folders)
