[project]
name = "the-one-v3"
version = "0.1.0"
description = "THE_ONE - Motorcycle Repair Chatbot & Booking System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pillow>=11.0.0",
    "gunicorn>=21.2.0",
    "sentence-transformers>=2.2.2",
]
