[project]
name = "the-one-v3"
version = "0.1.0"
description = "THE_ONE - Motorcycle Repair Chatbot & Booking System"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pillow>=11.0.0",
    "gunicorn>=21.2.0",
    "sentence-transformers>=2.2.2",
    "selenium>=4.39.0",
    "pgvector>=0.4.2",
    "google-generativeai>=0.8.6",
    "webdriver-manager>=4.0.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.3.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "pre-commit>=4.5.1,<5",
    "mypy>=1.5.1",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.ruff]
extend-select = ["I"]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "the_one",
    "booking",
    "chatbot",
    "chat",
    "mechanics",
    "users",
    "scraper_and_import_embedding",
    "the_one_app",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
