[project]
name = "the-one-v3"
version = "0.1.0"
description = "THE_ONE - Motorcycle Repair Chatbot & Booking System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pillow>=11.0.0",
    "gunicorn>=21.2.0",
    "sentence-transformers>=2.2.2",
    "selenium>=4.39.0",
    "pgvector>=0.4.2",
    "google-generativeai>=0.8.6",
    "webdriver-manager>=4.0.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
]
